Using principal to get authenticated username instead of parameters sent in QueryParam.